# ScalaGameMath

./: LICENSE  README.md  build.sbt
cpp/: CMakeLists.txt  README.md  main.cpp
cpp/fused/: pga3d.h  pga3dphysics.h
cpp/pga3d/: Bivector.h  BivectorBulk.h  BivectorWeight.h  Motor.h  Multivector.h  Plane.h  PlaneIdeal.h  Point.h  PointCenter.h  ProjectivePoint.h  ProjectiveTranslator.h  PseudoScalar.h  Quaternion.h  README.md  Translator.h  TranslatorWithQuaternion.h  Vector.h  opsAntiDot.h  opsAntiGeometric.h  opsAntiReverse.h  opsAntiWedge.h  opsArithmetic.h  opsBivector.h  opsBivectorBulk.h  opsBivectorWeight.h  opsBulk.h  opsConstructors.h  opsCross.h  opsDot.h  opsDual.h  opsGeometric.h  opsMotor.h  opsNorm.h  opsPoint.h  opsProject.h  opsQuaternion.h  opsReverse.h  opsReverseSandwich.h  opsSandwich.h  opsSandwichAsMatrix.h  (+29 more)
cpp/pga3dphysics/: AABB.h  BodyLine.h  BodyPoint.h  BodyState.h  Cylinder.h  Edge.h  Forque.h  Friction.h  Gravity.h  Inertia.h  InertiaLocal.h  InertiaLocalSphere.h  InertiaMovedLocal.h  InertiaSummable.h  LinearOperator.h  PhysicsBody.h  PhysicsSolverRK4.h  README.md  Sphere.h  Spring.h  SpringToLine.h  Torsion.h  Triangle.h  Velocity.h  pga3dphysics.h
cpp/test/: binary_ops_test.cpp  simple_arith_tests.cpp
examples/indigodemo/: README.md  build.sbt
examples/nbody/: .gitignore  README.md  build.gradle  gradle.properties
examples/nbody/core/: build.gradle
examples/nbody/lwjgl3/: build.gradle
examples/precession/: README.md  build.sbt
math/: README.md
pga3d/: README.md
pga3dCodeGen/: README.md
pga3dPhysics/: README.md  REAMDE.md
pga3dgeom/: README.md
pga3dphysics/: README.md
physics3d/: README.md
project/: plugins.sbt
src/main/scala/: EulerAngles.scala  MathUtils.scala  Matrix2d.scala  Matrix3d.scala  Matrix4d.scala  Quaternion.scala  Vector2d.scala  Vector3d.scala  Vector4d.scala  VectorNd.scala
src/main/scala/com/kright/math/: DifferentialSolvers.scala  EulerAngles.scala  IdentityFactory.scala  MathUtils.scala  Matrix2d.scala  Matrix3d.scala  Matrix4d.scala  MatrixNd.scala  MatrixNdFactory.scala  Quaternion.scala  Vector2d.scala  Vector3d.scala  Vector4d.scala  VectorNd.scala  VectorSwizzleOperators.scala  ZeroFactory.scala
src/main/scala/com/kright/physics3d/: Acceleration3d.scala  AngularFriction3d.scala  AngularFriction3dParams.scala  AngularSpring3d.scala  BodySystem.scala  Force3d.scala  Friction.scala  Impulse3d.scala  Inertia3d.scala  Invariants.scala  Joint3d.scala  LinearWithAngular.scala  OrientationSpring3d.scala  Spring3d.scala  State3d.scala  State3dDerivative.scala  StatsAccumulator.scala  Transform3d.scala  Velocity3d.scala
src/test/scala/: EulerAnglesTest.scala  MatrixTest.scala  QuaternionTest.scala  VectorMathGenerators.scala  VectorTest.scala
src/test/scala/com/kright/math/: EulerAnglesTest.scala  MathUtilsTest.scala  MatrixTest.scala  QuaternionTest.scala  SwizzleOperatorsTest.scala  VectorMathGenerators.scala  VectorTest.scala
src/test/scala/com/kright/physics3d/: AngularFriction3dTest.scala  AngularSpring3dTest.scala  BodySystemTest.scala  FrictionTest.scala  InertiaTest.scala  InvariantsTest.scala  OrientationSpring3dTest.scala  PhysicsGenerator.scala  PhysicsGenerators.scala  PhysicsTestUtil.scala  (+4 more)
vector/: README.md
(+558 files in other folders)
